# dictate

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  requirements.txt  test_injection.py
.claude/: settings.local.json
scripts/: com.dictate.app.plist  install.sh
src/dictate/: __init__.py  __main__.py  app.py  config.py  pipeline.py
src/dictate/asr/: base.py  factory.py  whisper_api.py  whisper_local.py
src/dictate/audio/: recorder.py  sound_feedback.py
src/dictate/hotkey/: base.py  factory.py  pynput_listener.py  pyobjc_fn_listener.py
src/dictate/injection/: injector.py
src/dictate/notification/: __init__.py  notifier.py
src/dictate/processing/: base.py  factory.py  ollama_processor.py  regex_processor.py
tests/: conftest.py  test_config.py  test_pipeline.py  test_recorder.py  test_regex_processor.py
